[workspace]
members = [
    "rai",
    "rai-core",
    "rai-nn",
    "rai-opt",
    "rai-models",
    "rai-datasets",
    "rai-derive",
    "examples/*",
]

resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["science"]

[workspace.dependencies]
rai-core = { path = "rai-core", version = "0.11.0" }
rai-derive = { path = "rai-derive", version = "0.11.0" }
rai-nn = { path = "rai-nn", version = "0.11.0" }
rai-opt = { path = "rai-opt", version = "0.11.0" }
rai = { path = "rai", version = "0.11.0" }
rai-models = { path = "rai-models", version = "0.11.0" }
rai-datasets = { path = "rai-datasets", version = "0.11.0" }
safetensors = "0.4.1"
candle-core = { version = "0.4.1" }
candle-flash-attn = { version = "0.4.1" }
paste = "1.0"
dyn-clone = "1.0.16"
once_cell = "1.19.0"
thiserror = "1.0.51"
anyhow = { version = "1", features = ["backtrace"] }
criterion = "0.3"
tracing = "0.1.40"
tracing-tree = "0.3.0"
tracing-test = "0.1"
tracing-subscriber = "0.3.18"
colored = "2.1.0"
tokenizers = { version = "0.15.0", features = ["onig"] }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.3.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
num-traits = "0.2.17"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }
parquet = { version = "50.0.0" }
rand = "0.8.5"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.metadata.workspaces]
no_individual_tags = true
