[package]
name = "rai-core"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "ML framework with Ergonomic APIs in Rust"
keywords = ["deep-learning", "machine-learning", "tensor"]
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
repository = "https://github.com/cksac/rai"
homepage = "https://github.com/cksac/rai"

[dependencies]
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
safetensors = { workspace = true }
candle-core = { workspace = true }
dyn-clone = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
paste = { workspace = true }
colored = { workspace = true }
