[package]
name = "rai-core"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "ML framework with Ergonomic APIs in Rust"
keywords = ["deep-learning", "machine-learning", "tensor"]
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
repository = "https://github.com/cksac/rai"
homepage = "https://github.com/cksac/rai"

[dependencies]
half = { workspace = true }
num-traits = { workspace = true }
safetensors = { workspace = true }
candle-core = { workspace = true, optional = true }
dyn-clone = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
paste = { workspace = true }
colored = { workspace = true }

[features]
default = ["candle-backend"]
candle-backend = ["candle-core"]
cuda = ["candle-core?/cuda"]
cudnn = ["candle-core?/cudnn"]
mkl = ["candle-core?/mkl"]
accelerate = ["candle-core?/accelerate"]
metal = ["candle-core?/metal"]
