[package]
name = "rai-nn"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "ML framework with Ergonomic APIs in Rust"
keywords = ["deep-learning", "machine-learning", "tensor"]
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
repository = "https://github.com/cksac/rai"
homepage = "https://github.com/cksac/rai"

[dependencies]
rai-core = { workspace = true }
safetensors = { workspace = true }

[features]
default = ["candle-backend"]
candle-backend = ["rai-core/candle-backend"]
cuda = ["rai-core/cuda"]
cudnn = ["rai-core/cudnn"]
mkl = ["rai-core/mkl"]
accelerate = ["rai-core/accelerate"]
metal = ["rai-core/metal"]