[package]
name = "rai"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "ML framework with Ergonomic APIs in Rust"
keywords = ["deep-learning", "machine-learning", "tensor"]
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
repository = "https://github.com/cksac/rai"
homepage = "https://github.com/cksac/rai"

[dependencies]
rai-core = { path = "../rai-core", version = "0.3.0" }
rai-nn = { path = "../rai-nn", version = "0.3.0" }
