[package]
name = "rai"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "ML framework with Ergonomic APIs in Rust"
keywords = ["deep-learning", "machine-learning", "tensor"]
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
repository = "https://github.com/cksac/rai"
homepage = "https://github.com/cksac/rai"

[dependencies]
rai-core = { workspace = true }
rai-nn = { workspace = true }
rai-opt = { workspace = true }
rai-derive = { workspace = true }
hf-hub = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["candle-backend"]
candle-backend = ["rai-core/candle-backend", "rai-nn/candle-backend", "rai-opt/candle-backend"]
cuda = ["rai-core/cuda", "rai-nn/cuda", "rai-opt/cuda"]
cudnn = ["rai-core/cudnn", "rai-nn/cudnn", "rai-opt/cudnn"]
mkl = ["rai-core/mkl", "rai-nn/mkl", "rai-opt/mkl"]
accelerate = ["rai-core/accelerate", "rai-nn/accelerate", "rai-opt/accelerate"]
metal = ["rai-core/metal", "rai-nn/metal", "rai-opt/metal"]
debug-location = ["rai-core/debug-location"]