[package]
authors = ["cksac <cs.cksac@gmail.com>"]
name = "benchmark"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
rai = { workspace = true }
rai-datasets = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
candle-core = { version = "0.4.1" }
candle-nn = { version = "0.4.1" }
candle-datasets = { version = "0.4.1" }


[features]
cuda = ["rai/cuda", "candle-core/cuda", "candle-nn/cuda"]
