[package]
authors = ["cksac <cs.cksac@gmail.com>"]
name = "benchmark"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
rai = { workspace = true }
rai-datasets = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-datasets = { workspace = true }


[features]
cuda = ["rai/cuda", "candle-core/cuda", "candle-nn/cuda"]
