[package]
authors = ["cksac <cs.cksac@gmail.com>"]
name = "mnist-cnn"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
rai = { workspace = true }
rai-datasets = { workspace = true }
rand = { workspace = true }

[features]
cuda = ["rai/cuda"]

