[package]
authors = ["cksac <cs.cksac@gmail.com>"]
name = "mnist-dit"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
rai = { workspace = true }
rai-datasets = { workspace = true }
rand = { workspace = true }
backtrace = "0.3.40"

[features]
cuda = ["rai/cuda"]
