[package]
authors = ["cksac <cs.cksac@gmail.com>"]
name = "mnist"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rai = { workspace = true }
