[package]
name = "qwen2"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rai = { workspace = true }
rai-models = { workspace = true }
tokenizers = { workspace = true }
clap = { workspace = true }
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }